TestInstanceCloneAsLoadsStores.java fails with -XX:+StressGCM

XMLWordPrintable

    • b09

        test/hotspot/jtreg/compiler/arraycopy/TestInstanceCloneAsLoadsStores.java

        CompileCommand: dontinline compiler/arraycopy/TestInstanceCloneAsLoadsStores.m*
        Test m3 failed
        source:
        int compiler.arraycopy.TestInstanceCloneUtils$E.i1 = 0
        int compiler.arraycopy.TestInstanceCloneUtils$E.i2 = 1
        int compiler.arraycopy.TestInstanceCloneUtils$E.i3 = 2
        int compiler.arraycopy.TestInstanceCloneUtils$E.i4 = 3
        int compiler.arraycopy.TestInstanceCloneUtils$E.i5 = 4
        int compiler.arraycopy.TestInstanceCloneUtils$E.i6 = 5
        int compiler.arraycopy.TestInstanceCloneUtils$E.i7 = 6
        int compiler.arraycopy.TestInstanceCloneUtils$E.i8 = 7
        int compiler.arraycopy.TestInstanceCloneUtils$E.i9 = 8
        result:
        -714222088
        STDERR:
        java.lang.RuntimeException: some tests failed
        at compiler.arraycopy.TestInstanceCloneAsLoadsStores.main(TestInstanceCloneAsLoadsStores.java:110)
        at java.base/jdk.internal.reflect.NativeMethodAccessorImpl.invoke0(Native Method)
        at java.base/jdk.internal.reflect.NativeMethodAccessorImpl.invoke(NativeMethodAccessorImpl.java:62)
        at java.base/jdk.internal.reflect.DelegatingMethodAccessorImpl.invoke(DelegatingMethodAccessorImpl.java:43)
        at java.base/java.lang.reflect.Method.invoke(Method.java:564)
        at com.sun.javatest.regtest.agent.MainWrapper$MainThread.run(MainWrapper.java:127)
        at java.base/java.lang.Thread.run(Thread.java:832)

        JavaTest Message: Test threw exception: java.lang.RuntimeException: some tests failed
        JavaTest Message: shutting down test

        STATUS:Failed.`main' threw exception: java.lang.RuntimeException: some tests failed
        rerun:
        cd /oracle/jdk_jdk/open/JTwork/scratch && \
        DISPLAY=:0 \
        GNOME_DESKTOP_SESSION_ID=this-is-deprecated \
        HOME=/home/tobias \
        LANG=en_US.UTF-8 \
        LD_LIBRARY_PATH=/oracle/documents/misc/ \
        PATH=/bin:/usr/bin \
        XMODIFIERS=@im=ibus \
        CLASSPATH=/oracle/jdk_jdk/open/JTwork/classes/compiler/arraycopy/TestInstanceCloneAsLoadsStores.d:/oracle/jdk_jdk/open/test/hotspot/jtreg/compiler/arraycopy:/oracle/jdk_jdk/open/JTwork/classes:/oracle/jdk_jdk/open/test/hotspot/jtreg:/home/tobias/programs/jtreg/lib/javatest.jar:/home/tobias/programs/jtreg/lib/jtreg.jar \
            /oracle/jdk_jdk/build/linux-x86_64-server-fastdebug/jdk/bin/java \
                -Dtest.src=/oracle/jdk_jdk/open/test/hotspot/jtreg/compiler/arraycopy \
                -Dtest.src.path=/oracle/jdk_jdk/open/test/hotspot/jtreg/compiler/arraycopy:/oracle/jdk_jdk/open/test/hotspot/jtreg \
                -Dtest.classes=/oracle/jdk_jdk/open/JTwork/classes/compiler/arraycopy/TestInstanceCloneAsLoadsStores.d \
                -Dtest.class.path=/oracle/jdk_jdk/open/JTwork/classes/compiler/arraycopy/TestInstanceCloneAsLoadsStores.d:/oracle/jdk_jdk/open/JTwork/classes \
                -Dtest.vm.opts= \
                -Dtest.tool.vm.opts= \
                -Dtest.compiler.opts= \
                -Dtest.java.opts=-XX:+StressGCM \
                -Dtest.jdk=/oracle/jdk_jdk/build/linux-x86_64-server-fastdebug/jdk \
                -Dcompile.jdk=/oracle/jdk_jdk/build/linux-x86_64-server-fastdebug/jdk \
                -Dtest.timeout.factor=4.0 \
                -Dtest.root=/oracle/jdk_jdk/open/test/hotspot/jtreg \
                -XX:+StressGCM \
                -XX:-BackgroundCompilation \
                -XX:-UseOnStackReplacement \
                -XX:CompileCommand=dontinline,compiler.arraycopy.TestInstanceCloneAsLoadsStores::m* \
                -XX:+IgnoreUnrecognizedVMOptions \
                -XX:-ReduceInitialCardMarks \
                com.sun.javatest.regtest.agent.MainWrapper /oracle/jdk_jdk/open/JTwork/compiler/arraycopy/TestInstanceCloneAsLoadsStores.d/main.2.jta

        TEST RESULT: Failed. Execution failed: `main' threw exception: java.lang.RuntimeException: some tests failed

          1. field_load_wrong_memory.png
            67 kB
            Christian Hagedorn
          2. array_copy_with_gc_barrier.png
            82 kB
            Christian Hagedorn

              Assignee:
              Christian Hagedorn
              Reporter:
              Tobias Hartmann
              Votes:
              0 Vote for this issue
              Watchers:
              5 Start watching this issue

                Created:
                Updated:
                Resolved: