8235332: TestInstanceCloneAsLoadsStores.java fails with -XX:+StressGCM

Account for GC barriers when skipping a cloned ArrayCopyNode in ConnectionGraph::find_inst_mem()

Reviewed-by: roland, neliasso